<resources>
    <string name="app_name">Fiap Food</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="cb_connected">Keep Connected</string>
    <string name="err_login">Invalid username or password</string>
    <string name="bt_add">Add New Restaurant</string>
    <string name="bt_see_all">See All Restaurants</string>
    <string name="bt_see_map">See restaurants on the map</string>
    <string name="bt_about">About</string>
    <string name="txt_start">Login or register to start!</string>
    <string name="facebook_app_id">1723421487870907</string>
    <string name="bt_login">Login/Register</string>
    <string name="type_rodizio">Rodizio</string>
    <string name="type_delivery">Delivery</string>
    <string name="type_fast_food">Fast-Food</string>
    <string name="type_PF">PF</string>
    <string name="type_self_service">Self-Service</string>
    <string name="type_undefined">Undefined</string>
    <string name="type_nao_sei">Não Sei</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wait_title">Wait…</string>
    <string name="get_data">Getting initial data…</string>

    <string-array name="types">
        <item>@string/type_rodizio</item>
        <item>@string/type_delivery</item>
        <item>@string/type_fast_food</item>
        <item>@string/type_PF</item>
        <item>@string/type_self_service</item>
        <item>@string/type_undefined</item>
        <item>@string/type_nao_sei</item>
    </string-array>
    <string name="title_activity_restaurants_map">FiapFood</string>
    <string name="restaurant_search">Restaurant Search</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_type">Restaurant Type</string>
    <string name="retaurant_price">Restaurant Price</string>
    <string name="search">Search</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="phone">Phone</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="restaurant_picture">Restaurant Picture</string>
    <string name="restaurant_phone">Restaurant Phonenumber</string>
    <string name="restaurant_price">Restaurant Price</string>
    <string name="restaurant_lat">Restaurant Latitude</string>
    <string name="restaurant_lon">Restaurant Longitude</string>
    <string name="restaurant_description">Restaurant Description</string>
    <string name="error_delete">Error when tried to delete</string>
    <string name="success_delete">Restaurant is changed</string>
    <string name="error_edit">Error when tried edit.</string>
    <string name="wait">Wait...</string>
    <string name="success_restaurant">Restaurant is updated!</string>
    <string name="error_update">Couldn\'t save the Restaurant!</string>
</resources>
