<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.fiap.daa.fiapfood.LoginActivity"
    android:padding="@dimen/window_padding">

    <TextView
        android:id="@+id/tvStart"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/txt_start"
        android:textSize="18dp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tlName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tlPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/cbConnected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb_connected"/>

            <Button
                android:id="@+id/btLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_login"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/button_padding"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>


            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/button_padding"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/info"
                android:textSize="18sp"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
