<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/toolbar"/>


        <TextView
            android:id="@+id/tvFormTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/add_restaurant"/>
        <TextView
            android:id="@+id/tvPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_picture"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <ImageButton
                android:id="@+id/ibtTakePic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"
                android:layout_weight="1"/>
            <ImageButton
                android:id="@+id/ibtGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_gallery"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/ivPreview"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:visibility="gone"
                android:scaleType="fitCenter"
                android:layout_weight="1"
                />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlRestaurantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etRestaurantName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Restaurant Name"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlRestaurantPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etRestaurantPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/restaurant_phone"
                android:inputType="phone"/>

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Restaurant Type"/>
        <Spinner
            android:id="@+id/spType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlRestaurantPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etRestaurantPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/restaurant_price"
                android:inputType="numberDecimal"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlRestaurantLat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etRestaurantLat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/restaurant_lat"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlRestaurantLon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etRestaurantLon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/restaurant_lon"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/mapInput"
            android:name="com.google.android.gms.maps.SupportMapFragment" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlRestaurantDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etRestaurantDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/restaurant_description"
                android:inputType="textMultiLine" />

        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</ScrollView>